# Copyright 2018 the Deno authors. All rights reserved. MIT license.
import("//build_extra2/gyp2gn/gyp2gn.gni")

#group("default") {
#  testonly = true
#  deps = [
#    ":openssl",
#  ]
#}


gyp_import("openssl") {
  gypfile = rebase_path("deps/node/deps/openssl/openssl.gyp")
  project_root_dir = rebase_path(".")
}